Replace character reference

--- a/l10n/po/ja_JP/_guides/amqp-reference.adoc.po
+++ b/l10n/po/ja_JP/_guides/amqp-reference.adoc.po
@@ -264,7 +264,7 @@ msgstr ""
 #: upstream/_guides/amqp-reference.adoc:120
 #, fuzzy
 msgid "Or, you can retrieve the Message<Double>:"
-msgstr "または、Message&lt;Double&gt;を取得することができます。"
+msgstr "または、Message<Double>を取得することができます。"
 
 #. type: delimited block -
 #: upstream/_guides/amqp-reference.adoc:127
