--- a/l10n/po/ja_JP/_guides/building-native-image.adoc.po
+++ b/l10n/po/ja_JP/_guides/building-native-image.adoc.po
@@ -1171,7 +1171,7 @@ msgstr "ホストのディレクトリ `target/native-image` をコンテナの 
 #: upstream/_guides/building-native-image.adoc:705
 #, fuzzy
 msgid "Switch the working directory to `/work`, which we have mounted in <1>."
-msgstr "作業ディレクトリを、&lt;1&gt;でマウントした `/work` に切り替えます。"
+msgstr "作業ディレクトリを、<1>でマウントした `/work` に切り替えます。"
 
 #. type: Plain text
 #: upstream/_guides/building-native-image.adoc:706
