--- a/l10n/po/ja_JP/_guides/cassandra.adoc.po
+++ b/l10n/po/ja_JP/_guides/cassandra.adoc.po
@@ -1248,7 +1248,7 @@ msgstr "メトリクスが適切に有効化されると、有効化されたす
 #: upstream/_guides/cassandra.adoc:709
 #, fuzzy
 msgid "Running in dev mode with `mvn clean quarkus:dev`, if you point your browser to `http://localhost:8080/metrics` you should see a list of metrics; search for metrics whose names contain `cassandra`."
-msgstr "開発モードで `mvn clean quarkus:dev` を実行している場合、ブラウザを以下に向けると、メトリクスのリストが表示されます。 `&lt;a href=\"http://localhost:8080/metrics\" class=\"bare\"&gt;http://localhost:8080/metrics&lt;/a&gt;`メトリクスのリストが表示されます。名前に `cassandra` が含まれるメトリクスを検索してください。"
+msgstr "開発モードで `mvn clean quarkus:dev` を実行している場合、ブラウザを以下に向けると、メトリクスのリストが表示されます。 `<a href=\"http://localhost:8080/metrics\" class=\"bare\">http://localhost:8080/metrics</a>`メトリクスのリストが表示されます。名前に `cassandra` が含まれるメトリクスを検索してください。"
 
 #. type: Plain text
 #: upstream/_guides/cassandra.adoc:713
