--- a/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
+++ b/l10n/po/ja_JP/_guides/deploying-to-openshift.adoc.po
@@ -295,7 +295,7 @@ msgstr "実行されるビルドは、 _s2iバイナリビルド_です。ビル
 #: upstream/_guides/deploying-to-openshift.adoc:143
 #, fuzzy
 msgid "During the build you may find the `Caused by: javax.net.ssl.SSLHandshakeException: sun.security.validator.ValidatorException: PKIX path building failed` exception due to self-signed certificate. To solve this, just add the following line to your `application.properties`: ```properties quarkus.kubernetes-client.trust-certs=true ``` For more information, see link:https://quarkus.io/guides/deploying-to-kubernetes#client-connection-configuration[deploying to kubernetes]."
-msgstr "ビルド中に、自己署名証明書が原因で `Caused by: javax.net.ssl.SSLHandshakeException: sun.security.validator.ValidatorException: PKIX path building failed` の例外が発生することがあります。これを解決するには、次の行を `application.properties` に追加してください。 `&lt;code&gt;properties quarkus.kubernetes-client.trust-certs=true &lt;/code&gt;`詳しくは、 link:https://quarkus.io/guides/deploying-to-kubernetes#client-connection-configuration[kubernetesへのデプロイメント]をご覧ください。"
+msgstr "ビルド中に、自己署名証明書が原因で `Caused by: javax.net.ssl.SSLHandshakeException: sun.security.validator.ValidatorException: PKIX path building failed` の例外が発生することがあります。これを解決するには、次の行を `application.properties` に追加してください。 `<code>properties quarkus.kubernetes-client.trust-certs=true </code>`詳しくは、 link:https://quarkus.io/guides/deploying-to-kubernetes#client-connection-configuration[kubernetesへのデプロイメント]をご覧ください。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:146
@@ -319,7 +319,7 @@ msgstr ""
 #: upstream/_guides/deploying-to-openshift.adoc:157
 #, fuzzy
 msgid "Lists the image streams created. The image stream of our application should be tagged as <project>/openshift-quickstart:1.0.0-SNAPSHOT."
-msgstr "作成されたイメージ・ストリームを一覧表示します。私たちのアプリケーションのイメージ・ストリームは、&lt;project&gt;/openshift-quickstart:1.0.0-SNAPSHOT としてタグ付けされるべきです。"
+msgstr "作成されたイメージ・ストリームを一覧表示します。私たちのアプリケーションのイメージ・ストリームは、<project>/openshift-quickstart:1.0.0-SNAPSHOT としてタグ付けされるべきです。"
 
 #. type: Plain text
 #: upstream/_guides/deploying-to-openshift.adoc:158
