--- a/l10n/po/ja_JP/_guides/funqy-knative-events.adoc.po
+++ b/l10n/po/ja_JP/_guides/funqy-knative-events.adoc.po
@@ -555,7 +555,7 @@ msgstr ""
 #: upstream/_guides/funqy-knative-events.adoc:337
 #, fuzzy
 msgid "This will provide you a URL similar to e.g.: `http://broker-ingress.knative-eventing.svc.cluster.local/knativetutorial/default`. Remember this URL."
-msgstr "これにより、例えば以下のようなURLが表示されます。 `&lt;a href=\"http://broker-ingress.knative-eventing.svc.cluster.local/knativetutorial/default\" class=\"bare\"&gt;http://broker-ingress.knative-eventing.svc.cluster.local/knativetutorial/default&lt;/a&gt;`.このURLを覚えておいてください。"
+msgstr "これにより、例えば以下のようなURLが表示されます。 `<a href=\"http://broker-ingress.knative-eventing.svc.cluster.local/knativetutorial/default\" class=\"bare\">http://broker-ingress.knative-eventing.svc.cluster.local/knativetutorial/default</a>`.このURLを覚えておいてください。"
 
 #. type: Plain text
 #: upstream/_guides/funqy-knative-events.adoc:340
