--- a/l10n/po/ja_JP/_guides/includes/create-app.adoc.po
+++ b/l10n/po/ja_JP/_guides/includes/create-app.adoc.po
@@ -49,7 +49,7 @@ msgstr "Gradleプロジェクトを作成したい場合は、 `--gradle` また
 #: upstream/_guides/includes/create-app.adoc:22
 #, fuzzy
 msgid "_For more information about how to install the Quarkus CLI, please refer to xref:cli-tooling.adoc[the Quarkus CLI guide]._"
-msgstr "_Quarkus CLIのインストール方法については、&lt;a href=\"cli-tooling.html\"&gt;Quarkus CLIガイド&lt;/a&gt;_をご参照ください。"
+msgstr "_Quarkus CLIのインストール方法については、<a href=\"cli-tooling.html\">Quarkus CLIガイド</a>_をご参照ください。"
 
 #. type: Block title
 #: upstream/_guides/includes/create-app.adoc:25
