--- a/l10n/po/ja_JP/_guides/kafka.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka.adoc.po
@@ -3978,7 +3978,7 @@ msgstr "受信した `fruit` オブジェクトを永続化します。"
 #: upstream/_guides/kafka.adoc:2012
 #, fuzzy
 msgid "As mentioned in <4>, you need a deserializer that can create a `Fruit` from the record.  This can be done using a Jackson deserializer:"
-msgstr "&lt;4&gt;で述べたように、レコードから `Fruit` を作成できるデシリアライザが必要です。これはJacksonデシリアライザを使って行うことができます。"
+msgstr "<4>で述べたように、レコードから `Fruit` を作成できるデシリアライザが必要です。これはJacksonデシリアライザを使って行うことができます。"
 
 #. type: Plain text
 #: upstream/_guides/kafka.adoc:2027 upstream/_guides/kafka.adoc:2113
