--- a/l10n/po/ja_JP/_guides/kogito-dev-services-build-time-config.adoc.po
+++ b/l10n/po/ja_JP/_guides/kogito-dev-services-build-time-config.adoc.po
@@ -50,7 +50,7 @@ msgid ""
 "--\n"
 "If DevServices has been explicitly enabled or disabled. DevServices is generally enabled by default, unless there is an existing configuration present. When DevServices is enabled Quarkus will attempt to automatically configure and start a Data Index when running in Dev mode.\n"
 "--"
-msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.enabled] `&lt;a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.enabled\"&gt;quarkus.kogito.devservices.enabled&lt;/a&gt;`"
+msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.enabled] `<a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.enabled\">quarkus.kogito.devservices.enabled</a>`"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:17
@@ -76,7 +76,7 @@ msgid ""
 "--\n"
 "The container image name to use.\n"
 "--"
-msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.image-name] `&lt;a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.image-name\"&gt;quarkus.kogito.devservices.image-name&lt;/a&gt;`"
+msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.image-name] `<a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.image-name\">quarkus.kogito.devservices.image-name</a>`"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:26
@@ -102,7 +102,7 @@ msgid ""
 "Optional fixed port the dev service will listen to.\n"
 "If not defined, the port will be chosen randomly.\n"
 "--"
-msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.port] `&lt;a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.port\"&gt;quarkus.kogito.devservices.port&lt;/a&gt;`"
+msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.port] `<a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.port\">quarkus.kogito.devservices.port</a>`"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:36
@@ -126,7 +126,7 @@ msgid ""
 "--\n"
 "Indicates if the Data Index instance managed by Quarkus Dev Services is shared. When shared, Quarkus looks for running containers using label-based service discovery. If a matching container is found, it is used, and so a second one is not started. Otherwise, Dev Services for Kogito starts a new container. The discovery uses the `kogito-dev-service-data-index` label. The value is configured using the service-name property. Container sharing is only used in dev mode.\n"
 "--"
-msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.shared] `&lt;a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.shared\"&gt;quarkus.kogito.devservices.shared&lt;/a&gt;`"
+msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.shared] `<a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.shared\">quarkus.kogito.devservices.shared</a>`"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:51
@@ -138,7 +138,7 @@ msgid ""
 "--\n"
 "The value of the `kogito-dev-service-data-index` label attached to the started container. This property is used when shared is set to true. In this case, before starting a container, Dev Services for Kogito looks for a container with the `kogito-dev-service-data-index` label set to the configured value. If found, it will use this container instead of starting a new one. Otherwise it starts a new container with the `kogito-dev-service-data-index` label set to the specified value. This property is used when you need multiple shared Data Index instances.\n"
 "--"
-msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.service-name] `&lt;a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.service-name\"&gt;quarkus.kogito.devservices.service-name&lt;/a&gt;`"
+msgstr "<span class=\"icon\">[ロック].</span>  link:[, id=quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.service-name] `<a href=\"#quarkus-kogito-dev-services-build-time-config_quarkus.kogito.devservices.service-name\">quarkus.kogito.devservices.service-name</a>`"
 
 #. type: Table
 #: upstream/_guides/kogito-dev-services-build-time-config.adoc:54
