--- a/l10n/po/ja_JP/_guides/rabbitmq.adoc.po
+++ b/l10n/po/ja_JP/_guides/rabbitmq.adoc.po
@@ -753,7 +753,7 @@ msgstr "Quarkusは、RabbitMQブローカーを自動的に起動し、アプリ
 #: upstream/_guides/rabbitmq.adoc:387
 #, fuzzy
 msgid "Open `http://localhost:8080/quotes.html` in your browser and request some quotes by clicking the button."
-msgstr "開く `&lt;a href=\"http://localhost:8080/quotes.html\" class=\"bare\"&gt;http://localhost:8080/quotes.html&lt;/a&gt;`をブラウザで開き、ボタンをクリックして見積もりを依頼してください。"
+msgstr "開く `<a href=\"http://localhost:8080/quotes.html\" class=\"bare\">http://localhost:8080/quotes.html</a>`をブラウザで開き、ボタンをクリックして見積もりを依頼してください。"
 
 #. type: Title ==
 #: upstream/_guides/rabbitmq.adoc:388
