--- a/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
+++ b/l10n/po/ja_JP/_guides/rest-client-reactive.adoc.po
@@ -350,7 +350,7 @@ msgstr ""
 #: upstream/_guides/rest-client-reactive.adoc:178
 #, fuzzy
 msgid "Having this configuration means that all requests performed using `org.acme.rest.client.ExtensionsService` will use `https://stage.code.quarkus.io/api` as the base URL.  Using the configuration above, calling the `getById` method of `ExtensionsService` with a value of `io.quarkus:quarkus-rest-client-reactive` would result in an HTTP GET request being made to `https://stage.code.quarkus.io/api/extensions?id=io.quarkus:quarkus-rest-client-reactive`."
-msgstr "この設定を行うと、 `org.acme.rest.client.ExtensionsService` を使用して実行されるすべてのリクエストは、ベースURLとして `&lt;a href=\"https://stage.code.quarkus.io/api\" class=\"bare\"&gt;https://stage.code.quarkus.io/api&lt;/a&gt;`をベースURLとして使用することになります。上記の構成で、 `ExtensionsService` の `getById` メソッドを `io.quarkus:quarkus-rest-client-reactive` の値で呼び出すと、次のような HTTP GET リクエストになります。 `&lt;a href=\"https://stage.code.quarkus.io/api/extensions?id=io.quarkus:quarkus-rest-client-reactive\" class=\"bare\"&gt;https://stage.code.quarkus.io/api/extensions?id=io.quarkus:quarkus-rest-client-reactive&lt;/a&gt;`."
+msgstr "この設定を行うと、 `org.acme.rest.client.ExtensionsService` を使用して実行されるすべてのリクエストは、ベースURLとして `<a href=\"https://stage.code.quarkus.io/api\" class=\"bare\">https://stage.code.quarkus.io/api</a>`をベースURLとして使用することになります。上記の構成で、 `ExtensionsService` の `getById` メソッドを `io.quarkus:quarkus-rest-client-reactive` の値で呼び出すと、次のような HTTP GET リクエストになります。 `<a href=\"https://stage.code.quarkus.io/api/extensions?id=io.quarkus:quarkus-rest-client-reactive\" class=\"bare\">https://stage.code.quarkus.io/api/extensions?id=io.quarkus:quarkus-rest-client-reactive</a>`."
 
 #. type: Plain text
 #: upstream/_guides/rest-client-reactive.adoc:180
