--- a/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-client.adoc.po
@@ -110,7 +110,7 @@ msgstr ""
 #: upstream/_guides/security-openid-connect-client.adoc:46
 #, fuzzy
 msgid "`OidcClient` will discover that the token endpoint URL is `http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/tokens`."
-msgstr "`OidcClient` は、トークンのエンドポイントURLが `&lt;a href=\"http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/tokens\" class=\"bare\"&gt;http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/tokens&lt;/a&gt;`."
+msgstr "`OidcClient` は、トークンのエンドポイントURLが `<a href=\"http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/tokens\" class=\"bare\">http://localhost:8180/auth/realms/quarkus/protocol/openid-connect/tokens</a>`."
 
 #. type: Plain text
 #: upstream/_guides/security-openid-connect-client.adoc:48
