--- a/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
+++ b/l10n/po/ja_JP/_guides/security-openid-connect-dev-services.adoc.po
@@ -294,7 +294,7 @@ msgstr "Keycloakがそれを強制する場合は、 `redirect_uri` の値が間
 #: upstream/_guides/security-openid-connect-dev-services.adoc:115
 #, fuzzy
 msgid "In this case select the `Keycloak Admin` option in the right top corner, login as `admin:admin`, select the test realm and the client which Dev UI for Keycloak is configured with and add `http://localhost:8080/q/dev/io.quarkus.quarkus-oidc/provider` to `Valid Redirect URIs`. If you used `-Dquarkus.http.port` when starting Quarkus then change `8080` to the value of `quarkus.http.port`."
-msgstr "この場合、右上の `Keycloak Admin` オプションを選択し、 `admin:admin` としてログインし、テストレルムとKeycloakのDev UIが設定されているクライアントを選択し、 に追加します。 `&lt;a href=\"http://localhost:8080/q/dev/io.quarkus.quarkus-oidc/provider\" class=\"bare\"&gt;http://localhost:8080/q/dev/io.quarkus.quarkus-oidc/provider&lt;/a&gt;`を `Valid Redirect URIs` に追加します。Quarkusの起動時に `-Dquarkus.http.port` を使用していた場合は、 `8080` を `quarkus.http.port` の値に変更してください。"
+msgstr "この場合、右上の `Keycloak Admin` オプションを選択し、 `admin:admin` としてログインし、テストレルムとKeycloakのDev UIが設定されているクライアントを選択し、 に追加します。 `<a href=\"http://localhost:8080/q/dev/io.quarkus.quarkus-oidc/provider\" class=\"bare\">http://localhost:8080/q/dev/io.quarkus.quarkus-oidc/provider</a>`を `Valid Redirect URIs` に追加します。Quarkusの起動時に `-Dquarkus.http.port` を使用していた場合は、 `8080` を `quarkus.http.port` の値に変更してください。"
 
 #. type: delimited block =
 #: upstream/_guides/security-openid-connect-dev-services.adoc:117
@@ -867,7 +867,7 @@ msgstr "非アプリケーションのルートパスに関する考察"
 #: upstream/_guides/security-openid-connect-dev-services.adoc:365
 #, fuzzy
 msgid "This document refers to the `http://localhost:8080/q/dev` Dev UI URL in several places where `q` is a default non application root path. If you customize `quarkus.http.root-path` and/or `quarkus.http.non-application-root-path` properties then replace `q` accordingly, please see https://quarkus.io/blog/path-resolution-in-quarkus/[Path Resolution in Quarkus] for more information."
-msgstr "このドキュメントでは `&lt;a href=\"http://localhost:8080/q/dev\" class=\"bare\"&gt;http://localhost:8080/q/dev&lt;/a&gt;`このドキュメントでは、いくつかの箇所でDev UIのURLを参照していますが、そこでは `q` がアプリケーション以外のデフォルトのルートパスになっています。 `quarkus.http.root-path` や `quarkus.http.non-application-root-path` のプロパティをカスタマイズしている場合は、 `q` を適宜置き換えてください。詳しくは、 link:https://quarkus.io/blog/path-resolution-in-quarkus/[QuarkusのPath Resolution]をご覧ください。"
+msgstr "このドキュメントでは `<a href=\"http://localhost:8080/q/dev\" class=\"bare\">http://localhost:8080/q/dev</a>`このドキュメントでは、いくつかの箇所でDev UIのURLを参照していますが、そこでは `q` がアプリケーション以外のデフォルトのルートパスになっています。 `quarkus.http.root-path` や `quarkus.http.non-application-root-path` のプロパティをカスタマイズしている場合は、 `q` を適宜置き換えてください。詳しくは、 link:https://quarkus.io/blog/path-resolution-in-quarkus/[QuarkusのPath Resolution]をご覧ください。"
 
 #. type: Title ==
 #: upstream/_guides/security-openid-connect-dev-services.adoc:366
