--- a/l10n/po/ja_JP/_includes/catalog-detail-band.html.po
+++ b/l10n/po/ja_JP/_includes/catalog-detail-band.html.po
@@ -20,7 +20,7 @@ msgstr ""
 #: upstream/_includes/catalog-detail-band.html:4
 #, fuzzy
 msgid "<a href=\"{{site.baseurl}}/catalog\">Extension Catalog</a> <i class=\"fas fa-chevron-right\"></i> {{ page.title }}"
-msgstr "&lt;a href=\"{{site.baseurl}}/catalog\"&gt;エクステンションカタログ&lt;/a&gt; &lt;i class=\"fas fa-chevron-right\"&gt;&lt;/i&gt; {{page.title }}。"
+msgstr "<a href=\"{{site.baseurl}}/catalog\">エクステンションカタログ</a> <i class=\"fas fa-chevron-right\"></i> {{page.title }}。"
 
 #. type: Content of: <div><div><div><h1>
 #: upstream/_includes/catalog-detail-band.html:11
@@ -74,13 +74,13 @@ msgstr "以下のガイドをご覧ください。"
 #: upstream/_includes/catalog-detail-band.html:20
 #, fuzzy
 msgid "<a href=\"#\">Use Jberet to do something cool</a>"
-msgstr "&lt;a href=\"#\"&gt;Jberetを使って何かクールなことをする&lt;/a&gt;。"
+msgstr "<a href=\"#\">Jberetを使って何かクールなことをする</a>。"
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/catalog-detail-band.html:21
 #, fuzzy
 msgid "<a href=\"#\">JBeret makes you jump higher</a>"
-msgstr "&lt;a href=\"#\"&gt;JBeret makes you jump higher&lt;/a&gt;。"
+msgstr "<a href=\"#\">JBeret makes you jump higher</a>。"
 
 #. type: Content of: <div><div><div><h3>
 #: upstream/_includes/catalog-detail-band.html:23
@@ -119,13 +119,13 @@ msgid ""
 "   <span class=\"hljs-keyword\">public</span> String name;\n"
 "\n"
 "}</code>"
-msgstr "&lt;code class=\"language-java hljs\" data-lang=\"java\"&gt;&lt;span class=\"hljs-keyword\"&gt;package&lt;/span&gt; org.acme.hibernate.asm.panache;"
+msgstr "<code class=\"language-java hljs\" data-lang=\"java\"><span class=\"hljs-keyword\">package</span> org.acme.hibernate.asm.panache;"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/catalog-detail-band.html:41
 #, fuzzy
 msgid "The Batch API and Runtime will be available out of the box. Please refer to the <a href=\"#\">Batch documentation</a>, or the <a href=\"#\">JBeret documentation</a> to learn about Batch Applications."
-msgstr "Batch API と Runtime はすぐに利用できるようになります。Batchアプリケーションについては、&lt;a href<mark>=\"\"&gt;Batch documentation&lt;/a&gt;、または&lt;a href=\"\"&gt;</mark>JBeret documentation&lt;/a&gt;をご参照ください。"
+msgstr "Batch API と Runtime はすぐに利用できるようになります。Batchアプリケーションについては、<a href<mark>=\"\">Batch documentation</a>、または<a href=\"\"></mark>JBeret documentation</a>をご参照ください。"
 
 #. type: Content of: <div><div><div><h3>
 #: upstream/_includes/catalog-detail-band.html:42
@@ -165,7 +165,7 @@ msgstr "デフォルト"
 #: upstream/_includes/catalog-detail-band.html:71
 #, fuzzy
 msgid "<code>quarkus.jberet.repository</code>"
-msgstr "&lt;code&gt;quarkus.jberet.repository&lt;/code&gt;を使用しています。"
+msgstr "<code>quarkus.jberet.repository</code>を使用しています。"
 
 #. type: Content of: <div><div><div><table><tr><td><p>
 #: upstream/_includes/catalog-detail-band.html:51
@@ -185,7 +185,7 @@ msgstr "JBeretとJobのデータを保存するためのリポジトリタイプ
 #: upstream/_includes/catalog-detail-band.html:72
 #, fuzzy
 msgid "<code>in-memory</code>, <code>jdbc</code>"
-msgstr "&lt;code&gt;インメモリ&lt;/code&gt;、&lt;code&gt;jdbc&lt;/code&gt;。"
+msgstr "<code>インメモリ</code>、<code>jdbc</code>。"
 
 #. type: Content of: <div><div><div><table><tr><td>
 #: upstream/_includes/catalog-detail-band.html:53
@@ -195,7 +195,7 @@ msgstr "&lt;code&gt;インメモリ&lt;/code&gt;、&lt;code&gt;jdbc&lt;/code&gt;
 #: upstream/_includes/catalog-detail-band.html:73
 #, fuzzy
 msgid "<code>in-memory</code>"
-msgstr "&lt;code&gt;in-memory&lt;/code&gt;。"
+msgstr "<code>in-memory</code>。"
 
 #. type: Content of: <div><div><div><h3>
 #: upstream/_includes/catalog-detail-band.html:78
@@ -291,19 +291,19 @@ msgstr "アプリケーション例"
 #: upstream/_includes/catalog-detail-band.html:175
 #, fuzzy
 msgid "<code>chunk</code> - A simple Job that reads, processes, and stores data from a file."
-msgstr "&lt;code&gt;chunk&lt;/code&gt; - ファイルからデータを読み込み、処理し、保存するシンプルなジョブ。"
+msgstr "<code>chunk</code> - ファイルからデータを読み込み、処理し、保存するシンプルなジョブ。"
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/catalog-detail-band.html:176
 #, fuzzy
 msgid "<code>jdbc-repository</code> - A Job that uses a jdbc datasource to store JBeret and Job metadata."
-msgstr "&lt;code&gt;jdbc-repository&lt;/code&gt; - JBeretとジョブのメタデータを保存するために、jdbcデータソースを使用するジョブです。"
+msgstr "<code>jdbc-repository</code> - JBeretとジョブのメタデータを保存するために、jdbcデータソースを使用するジョブです。"
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/catalog-detail-band.html:177
 #, fuzzy
 msgid "<code>scheduler</code> - Schedule a Job to run every 10 seconds"
-msgstr "&lt;code&gt;scheduler&lt;/code&gt; - 10秒ごとにジョブを実行するようにスケジュールします。"
+msgstr "<code>scheduler</code> - 10秒ごとにジョブを実行するようにスケジュールします。"
 
 #. type: Content of: <div><div><div><p>
 #: upstream/_includes/catalog-detail-band.html:179
@@ -327,7 +327,7 @@ msgstr "このような素晴らしい方々に感謝しています。"
 #: upstream/_includes/catalog-detail-band.html:183
 #, fuzzy
 msgid "This project follows the <a href=\"#\">all-contributors</a> specification. Contributions of any kind welcome!"
-msgstr "このプロジェクトは、&lt;a href=\"#\"&gt;all-contributors&lt;/a&gt;の仕様に従っています。あらゆる種類の貢献を歓迎します。"
+msgstr "このプロジェクトは、<a href=\"#\">all-contributors</a>の仕様に従っています。あらゆる種類の貢献を歓迎します。"
 
 #. type: Content of: <div><div><div><h3>
 #: upstream/_includes/catalog-detail-band.html:184
@@ -363,7 +363,7 @@ msgstr "Quarkusとの互換性"
 #: upstream/_includes/catalog-detail-band.html:198
 #, fuzzy
 msgid "<a href=\"#\">1.0</a>, <a href=\"#\">1.1</a>, <a href=\"#\">1.2</a>, <a href=\"#\">1.4</a>"
-msgstr "&lt;a href<mark>=\"\"&gt;1.0&lt;/a&gt;, &lt;a href=\"\"&gt;</mark>1.1&lt;/a&gt;, &lt;a href<mark>=\"\"&gt;1.2&lt;/a&gt;, &lt;a href=\"\"&gt;</mark>1.4&lt;/a&gt;となります。"
+msgstr "<a href<mark>=\"\">1.0</a>, <a href=\"\"></mark>1.1</a>, <a href<mark>=\"\">1.2</a>, <a href=\"\"></mark>1.4</a>となります。"
 
 #. type: Content of: <div><div><div><div><div><p>
 #: upstream/_includes/catalog-detail-band.html:203
@@ -399,7 +399,7 @@ msgstr "ビルド"
 #: upstream/_includes/catalog-detail-band.html:214
 #, fuzzy
 msgid "<a href=\"#\">Passing</a>"
-msgstr "&lt;a href=\"#\"&gt;Passing&lt;/a"
+msgstr "<a href=\"#\">Passing</a"
 
 #. type: Content of: <div><div><div><div><div><p>
 #: upstream/_includes/catalog-detail-band.html:217
@@ -411,7 +411,7 @@ msgstr "Maven-Central"
 #: upstream/_includes/catalog-detail-band.html:218
 #, fuzzy
 msgid "<a href=\"#\">Version 0.0.2</a>"
-msgstr "&lt;a href=\"#\"&gt;バージョン0.0.2&lt;/a"
+msgstr "<a href=\"#\">バージョン0.0.2</a"
 
 #. type: Content of: <div><div><div><div><div><p>
 #: upstream/_includes/catalog-detail-band.html:223
@@ -423,7 +423,7 @@ msgstr "エクステンション・リポジトリ"
 #: upstream/_includes/catalog-detail-band.html:224
 #, fuzzy
 msgid "<a href=\"#\">Extension Repo</a>"
-msgstr "&lt;a href=\"#\"&gt;エクステンションレポ&lt;/a&gt;&lt;/a"
+msgstr "<a href=\"#\">エクステンションレポ</a></a"
 
 #. type: Content of: <div><div><div><div><div><p>
 #: upstream/_includes/catalog-detail-band.html:227
@@ -435,7 +435,7 @@ msgstr "拡張機能のドキュメント"
 #: upstream/_includes/catalog-detail-band.html:228
 #, fuzzy
 msgid "<a href=\"#\">Documentation</a>"
-msgstr "&lt;a href=\"#\"&gt;ドキュメンテーション&lt;/a"
+msgstr "<a href=\"#\">ドキュメンテーション</a"
 
 #. type: Content of: <div><div><div><div><div><p>
 #: upstream/_includes/catalog-detail-band.html:233
@@ -447,7 +447,7 @@ msgstr "メンテナ"
 #: upstream/_includes/catalog-detail-band.html:234
 #, fuzzy
 msgid "<a href=\"#\">JBeret</a>"
-msgstr "&lt;a href=\"#\"&gt;JBeret&lt;/a"
+msgstr "<a href=\"#\">JBeret</a"
 
 #. type: Content of: <div><div><div><div><div><p>
 #: upstream/_includes/catalog-detail-band.html:237
@@ -459,7 +459,7 @@ msgstr "プロジェクトホームページ"
 #: upstream/_includes/catalog-detail-band.html:238
 #, fuzzy
 msgid "<a href=\"#\">JBeret Project</a>"
-msgstr "&lt;a href=\"#\"&gt;JBeretプロジェクト&lt;/a"
+msgstr "<a href=\"#\">JBeretプロジェクト</a"
 
 #. type: Content of: <div><div><div><div><div><p>
 #: upstream/_includes/catalog-detail-band.html:243
@@ -579,4 +579,4 @@ msgstr "貢献者"
 #: upstream/_includes/catalog-detail-band.html:288
 #, fuzzy
 msgid "<a href=\"#\">62 Contributors</a>"
-msgstr "&lt;a href=\"#\"&gt;62名の投稿者&lt;/a"
+msgstr "<a href=\"#\">62名の投稿者</a"
