--- a/l10n/po/ja_JP/_includes/catalog-index-band.html.po
+++ b/l10n/po/ja_JP/_includes/catalog-index-band.html.po
@@ -36,31 +36,31 @@ msgstr "あなたの選択したフィルター"
 #: upstream/_includes/catalog-index-band.html:11
 #, fuzzy
 msgid "<a href=\"#\">Version 1.1</a>"
-msgstr "&lt;a href=\"#\"&gt;バージョン1.1&lt;/a"
+msgstr "<a href=\"#\">バージョン1.1</a"
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/catalog-index-band.html:12
 #, fuzzy
 msgid "<a href=\"#\">Web</a>"
-msgstr "&lt;a href=\"#\"&gt;Web&lt;/a&gt;"
+msgstr "<a href=\"#\">Web</a>"
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/catalog-index-band.html:13
 #, fuzzy
 msgid "<a href=\"#\">Quarkus: XYZ</a>"
-msgstr "&lt;a href=\"#\"&gt;Quarkus: XYZ&lt;/a&gt; (英語)"
+msgstr "<a href=\"#\">Quarkus: XYZ</a> (英語)"
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/catalog-index-band.html:14
 #, fuzzy
 msgid "<a href=\"#\">Platform: Foo</a>"
-msgstr "&lt;a href=\"#\"&gt;Platform:Foo&lt;/a"
+msgstr "<a href=\"#\">Platform:Foo</a"
 
 #. type: Content of: <div><div><div><ul><div>
 #: upstream/_includes/catalog-index-band.html:15
 #, fuzzy
 msgid "<a href=\"#\">Clear All</a>"
-msgstr "&lt;a href=\"#\"&gt;すべてをクリア&lt;/a&gt;する"
+msgstr "<a href=\"#\">すべてをクリア</a>する"
 
 #. type: Content of: <div><div><div>
 #: upstream/_includes/catalog-index-band.html:18
@@ -81,7 +81,7 @@ msgstr "Quarkusバージョン"
 #: upstream/_includes/catalog-index-band.html:21
 #, fuzzy
 msgid "<select name=\"version\">"
-msgstr "&lt;select name=\"version\"&gt;"
+msgstr "<select name=\"version\">"
 
 #. type: Content of: <div><div><select><option>
 #: upstream/_includes/catalog-index-band.html:22
@@ -129,7 +129,7 @@ msgstr "1.2"
 #: upstream/_includes/catalog-index-band.html:69
 #, fuzzy
 msgid "</select>"
-msgstr "&lt;/select&gt;。"
+msgstr "</select>。"
 
 #. type: Content of: <div><div><h3>
 #: upstream/_includes/catalog-index-band.html:31
@@ -140,85 +140,85 @@ msgstr "カテゴリー"
 #: upstream/_includes/catalog-index-band.html:32
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"web\" name=\"web\" value=\"web\"><label for=\"web\"> Web</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"web\" name=\"web\" value=\"web\"&gt;&lt;label for=\"web\"&gt; Web&lt;/label&gt;"
+msgstr "<input type=\"checkbox\" id=\"web\" name=\"web\" value=\"web\"><label for=\"web\"> Web</label>"
 
 #. type: Content of: <div><div><input><br><input>
 #: upstream/_includes/catalog-index-band.html:33
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"data\" name=\"data\" value=\"data\"><label for=\"data\"> Data</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"data\" name=\"data\" value=\"data\"&gt;&lt;label for=\"data\"&gt; データ&lt;/label&gt;"
+msgstr "<input type=\"checkbox\" id=\"data\" name=\"data\" value=\"data\"><label for=\"data\"> データ</label>"
 
 #. type: Content of: <div><div><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:34
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"messaging\" name=\"messaging\" value=\"messaging\"><label for=\"messaging\"> Messaging</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"messaging\" name=\"messaging\" value=\"messaging\"&gt;&lt;label for=\"messaging\"&gt;メッセージング&lt;/label&gt;。"
+msgstr "<input type=\"checkbox\" id=\"messaging\" name=\"messaging\" value=\"messaging\"><label for=\"messaging\">メッセージング</label>。"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:35
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"core\" name=\"core\" value=\"core\"><label for=\"core\"> Core</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"core\" name=\"core\" value=\"core\"&gt;&lt;label for=\"core\"&gt; Core&lt;/label&gt;。"
+msgstr "<input type=\"checkbox\" id=\"core\" name=\"core\" value=\"core\"><label for=\"core\"> Core</label>。"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:36
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"reactive\" name=\"reactive\" value=\"reactive\"><label for=\"reactive\"> Reactive</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"reactive\" name=\"reactive\" value=\"reactive\"&gt;&lt;label for=\"reactive\"&gt; Reactive&lt;/label&gt;。"
+msgstr "<input type=\"checkbox\" id=\"reactive\" name=\"reactive\" value=\"reactive\"><label for=\"reactive\"> Reactive</label>。"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:37
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"cloud\" name=\"cloud\" value=\"cloud\"><label for=\"cloud\"> Cloud</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"cloud\" name=\"cloud\" value=\"cloud\"&gt;&lt;label for=\"cloud\"&gt; クラウド&lt;/label&gt;"
+msgstr "<input type=\"checkbox\" id=\"cloud\" name=\"cloud\" value=\"cloud\"><label for=\"cloud\"> クラウド</label>"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:38
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"observability\" name=\"observability\" value=\"observability\"><label for=\"observability\"> Observability</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"observability\" name=\"observability\" value=\"observability\"&gt;&lt;label for=\"observability\"&gt;Observability&lt;/label&gt;。"
+msgstr "<input type=\"checkbox\" id=\"observability\" name=\"observability\" value=\"observability\"><label for=\"observability\">Observability</label>。"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:39
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"security\" name=\"security\" value=\"security\"><label for=\"security\"> Security</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"security\" name=\"security\" value=\"security\"&gt;&lt;label for=\"security\"&gt;セキュリティ&lt;/label&gt;。"
+msgstr "<input type=\"checkbox\" id=\"security\" name=\"security\" value=\"security\"><label for=\"security\">セキュリティ</label>。"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:40
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"integration\" name=\"integration\" value=\"integration\"><label for=\"integration\"> Integration</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"integration\" name=\"integration\" value=\"integration\"&gt;&lt;label for=\"integration\"&gt; 統合&lt;/label&gt;。"
+msgstr "<input type=\"checkbox\" id=\"integration\" name=\"integration\" value=\"integration\"><label for=\"integration\"> 統合</label>。"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:41
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"busautomation\" name=\"busautomation\" value=\"busautomation\"><label for=\"busautomation\"> Business Automation</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"busautomation\" name=\"busautomation\" value=\"busautomation\"&gt;&lt;label for=\"busautomation\"&gt;ビジネスオートメーション&lt;/label&gt;。"
+msgstr "<input type=\"checkbox\" id=\"busautomation\" name=\"busautomation\" value=\"busautomation\"><label for=\"busautomation\">ビジネスオートメーション</label>。"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:42
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"serialization\" name=\"serialization\" value=\"serialization\"><label for=\"serialization\"> Serialization</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"serialization\" name=\"serialization\" value=\"serialization\"&gt;&lt;label for=\"serialization\"&gt;シリアル化&lt;/label&gt;。"
+msgstr "<input type=\"checkbox\" id=\"serialization\" name=\"serialization\" value=\"serialization\"><label for=\"serialization\">シリアル化</label>。"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:43
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"compatibility\" name=\"compatibility\" value=\"compatibility\"><label for=\"compatibility\"> Compatibility</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"compatibility\" name=\"compatibility\" value=\"compatibility\"&gt;&lt;label for=\"compatibility\"&gt;Compatibility&lt;/label&gt;。"
+msgstr "<input type=\"checkbox\" id=\"compatibility\" name=\"compatibility\" value=\"compatibility\"><label for=\"compatibility\">Compatibility</label>。"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:44
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"altlanguages\" name=\"altlanguages\" value=\"altlanguages\"><label for=\"altlanguages\"> Alternative Languages</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"altlanguages\" name=\"altlanguages\" value=\"altlanguages\"&gt;&lt;label for=\"altlanguages\"&gt;代替言語&lt;/label&gt;。"
+msgstr "<input type=\"checkbox\" id=\"altlanguages\" name=\"altlanguages\" value=\"altlanguages\"><label for=\"altlanguages\">代替言語</label>。"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input>
 #: upstream/_includes/catalog-index-band.html:45
 #, fuzzy
 msgid "<input type=\"checkbox\" id=\"miscellaneous\" name=\"miscellaneous\" value=\"miscellaneous\"><label for=\"miscellaneous\"> Miscellaneous</label>"
-msgstr "&lt;input type=\"checkbox\" id=\"miscellaneous\" name=\"miscellaneous\" value=\"miscellaneous\"&gt;&lt;label for=\"miscellaneous\"&gt;その他&lt;/label&gt;"
+msgstr "<input type=\"checkbox\" id=\"miscellaneous\" name=\"miscellaneous\" value=\"miscellaneous\"><label for=\"miscellaneous\">その他</label>"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><h3>
 #: upstream/_includes/catalog-index-band.html:46
@@ -229,7 +229,7 @@ msgstr "互換性"
 #: upstream/_includes/catalog-index-band.html:47
 #, fuzzy
 msgid "<select name=\"compatibility\">"
-msgstr "&lt;select name=\"compatibility\"&gt;"
+msgstr "<select name=\"compatibility\">"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><select><option>
 #: upstream/_includes/catalog-index-band.html:48
@@ -266,7 +266,7 @@ msgstr "Platform"
 #: upstream/_includes/catalog-index-band.html:59
 #, fuzzy
 msgid "<select name=\"platform\">"
-msgstr "&lt;select name=\"platform\"&gt;"
+msgstr "<select name=\"platform\">"
 
 #. type: Content of: <div><div><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><input><br><div><p>
 #: upstream/_includes/catalog-index-band.html:70
