--- a/l10n/po/ja_JP/_includes/events-discussions-band.html.po
+++ b/l10n/po/ja_JP/_includes/events-discussions-band.html.po
@@ -20,4 +20,4 @@ msgstr ""
 #: upstream/_includes/events-discussions-band.html:5
 #, fuzzy
 msgid "<a href=\"https://github.com/quarkusio/quarkus/discussions/categories/events\">Check out the \"Events\" section of Quarkus Discussions</a> for additional community related events."
-msgstr "&lt;a href=\"https://github.com/quarkusio/quarkus/discussions/categories/events\"&gt;その他のコミュニティ関連のイベントについては、Quarkus Discussions&lt;/a&gt;の「イベント」セクションをご覧ください。"
+msgstr "<a href=\"https://github.com/quarkusio/quarkus/discussions/categories/events\">その他のコミュニティ関連のイベントについては、Quarkus Discussions</a>の「イベント」セクションをご覧ください。"
