--- a/l10n/po/ja_JP/_includes/feedback-community-band.html.po
+++ b/l10n/po/ja_JP/_includes/feedback-community-band.html.po
@@ -31,7 +31,7 @@ msgstr "利用方法については、以下でお問い合わせ頂くことを
 #: upstream/_includes/feedback-community-band.html:7
 #, fuzzy
 msgid "Use the <a href=\"https://github.com/quarkusio/quarkus/discussions\">Discussions</a> section on our GitHub project."
-msgstr "私たちのGitHubプロジェクトの&lt;a href=\"https://github.com/quarkusio/quarkus/discussions\"&gt;Discussions&lt;/a&gt;セクションをご利用ください。"
+msgstr "私たちのGitHubプロジェクトの<a href=\"https://github.com/quarkusio/quarkus/discussions\">Discussions</a>セクションをご利用ください。"
 
 #. type: Content of: <div><div><div><ul><li>
 #: upstream/_includes/feedback-community-band.html:8
