--- a/l10n/po/ja_JP/_includes/homepage-imperative_and_reactive-band.html.po
+++ b/l10n/po/ja_JP/_includes/homepage-imperative_and_reactive-band.html.po
@@ -26,7 +26,7 @@ msgstr "ImperativeとReactiveの統一"
 #: upstream/_includes/homepage-imperative_and_reactive-band.html:7
 #, fuzzy
 msgid "Combine both the familiar imperative code and the reactive style when developing applications.  <a href=\"/vision/continuum\">Learn more</a>."
-msgstr "慣れ親しんだ命令型のコードとリアクティブなスタイルの両方を組み合わせてアプリケーションを開発することができます。 &lt;a href=\"/vision/continuum\"&gt;詳しくはこちら&lt;/a&gt;をご覧ください。"
+msgstr "慣れ親しんだ命令型のコードとリアクティブなスタイルの両方を組み合わせてアプリケーションを開発することができます。 <a href=\"/vision/continuum\">詳しくはこちら</a>をご覧ください。"
 
 #. type: Content of: <div><div><div><div><div><div>
 #: upstream/_includes/homepage-imperative_and_reactive-band.html:13
@@ -46,7 +46,7 @@ msgid ""
 "public String hello() {\n"
 "    return say.hello();\n"
 "}</code>"
-msgstr "&lt;code&gt;@Inject SayService say;"
+msgstr "<code>@Inject SayService say;"
 
 #. type: Content of: <div><div><div><div><div><div>
 #: upstream/_includes/homepage-imperative_and_reactive-band.html:26
@@ -58,11 +58,11 @@ msgstr "リアクティブ"
 #: upstream/_includes/homepage-imperative_and_reactive-band.html:28
 #, fuzzy, no-wrap
 msgid ""
-"<code>@Channel(\"kafka\") Multi&lt;String&gt; events;\n"
+"<code>@Channel(\"kafka\") Multi<String> events;\n"
 "\n"
 "@GET\n"
 "@Produces(MediaType.SERVER_SENT_EVENTS)\n"
-"public Multi&lt;String&gt; events() {\n"
+"public Multi<String> events() {\n"
 "    return events;\n"
 "}</code>"
-msgstr "&lt;code&gt;@Channel(\"kafka\") Multi&lt;String&gt; events;"
+msgstr "<code>@Channel(\"kafka\") Multi<String> events;"
