--- a/l10n/po/ja_JP/_posts/2019-06-05-quarkus-and-web-ui-development-mode.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-06-05-quarkus-and-web-ui-development-mode.adoc.po
@@ -271,7 +271,7 @@ msgstr "プロキシの設定は link:https://github.com/kabir/blog-quarkus-ui-d
 #: upstream/_posts/2019-06-05-quarkus-and-web-ui-development-mode.adoc:87
 #, fuzzy
 msgid "In our case, we have a servlet which needs to redirect back to the front-end (something I found I needed to implement OAuth in my main project). That has a check for the `-Dui.proxy` system property we saw earlier when handling the `/callback` path in https://github.com/kabir/blog-quarkus-ui-development/blob/master/src/main/java/org/kabir/quarkus/ui/SampleServlet.java[`SampleServlet`]. If this property is set, we prepend `https://localhost:4200` (the address of the Angular proxy) to the redirect URL if we find the proxy is running on port 4200."
-msgstr "今回のケースでは、フロントエンドにリダイレクトする必要のあるサーブレットがあります（メインプロジェクトでOAuthを実装するために必要なことがわかりました）。これには、先ほど `/callback` のパスを処理する際に見た `-Dui.proxy` システムプロパティのチェックがあります。  link:https://github.com/kabir/blog-quarkus-ui-development/blob/master/src/main/java/org/kabir/quarkus/ui/SampleServlet.java[`SampleServlet`].このプロパティが設定されている場合、前置して `&lt;a href=\"https://localhost:4200\" class=\"bare\"&gt;https://localhost:4200&lt;/a&gt;`(Angular プロキシのアドレス)をリダイレクト URL の前に追加します。"
+msgstr "今回のケースでは、フロントエンドにリダイレクトする必要のあるサーブレットがあります（メインプロジェクトでOAuthを実装するために必要なことがわかりました）。これには、先ほど `/callback` のパスを処理する際に見た `-Dui.proxy` システムプロパティのチェックがあります。  link:https://github.com/kabir/blog-quarkus-ui-development/blob/master/src/main/java/org/kabir/quarkus/ui/SampleServlet.java[`SampleServlet`].このプロパティが設定されている場合、前置して `<a href=\"https://localhost:4200\" class=\"bare\">https://localhost:4200</a>`(Angular プロキシのアドレス)をリダイレクト URL の前に追加します。"
 
 #. type: Plain text
 #: upstream/_posts/2019-06-05-quarkus-and-web-ui-development-mode.adoc:89
