--- a/l10n/po/ja_JP/_posts/2019-10-30-quarkus-0-27-0-released.adoc.po
+++ b/l10n/po/ja_JP/_posts/2019-10-30-quarkus-0-27-0-released.adoc.po
@@ -136,7 +136,7 @@ msgstr "ジャカルタのアーティファクトに移動"
 #: upstream/_posts/2019-10-30-quarkus-0-27-0-released.adoc:47
 #, fuzzy
 msgid "We used to have a mix of `javax.*` and `jakarta.*` artifacts in Quarkus: we have now moved everything to Jakarta."
-msgstr "以前は、Quarkusには以下のものが混在していました。 `javax. **` *と&lt;code&gt;jakarta.&lt;/code&gt;*のアーティファクトが混在していましたが、現在はすべてJakartaに移行しています。"
+msgstr "以前は、Quarkusには以下のものが混在していました。 `javax. **` *と<code>jakarta.</code>*のアーティファクトが混在していましたが、現在はすべてJakartaに移行しています。"
 
 #. type: Plain text
 #: upstream/_posts/2019-10-30-quarkus-0-27-0-released.adoc:49
