--- a/l10n/po/ja_JP/_posts/2020-04-21-io-thread-benchmark.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-04-21-io-thread-benchmark.adoc.po
@@ -192,12 +192,12 @@ msgstr ""
 "<pre>@Route(path = \"/hello/:name\", methods = HttpMethod.GET)\n"
 "void greetings(RoutingExchange ex) {.\n"
 "  RequestWrapper requestWrapper = new RequestWrapper(ex.getParam(\"name\").orElse(\"world\"));\n"
-"  Set&lt;ConstraintViolation&lt;RequestWrapper&gt;&gt; violations = validator.validate(requestWrapper));\n"
+"  Set<ConstraintViolation<RequestWrapper>> violations = validator.validate(requestWrapper));\n"
 "  if( violations.size() == 0) {。\n"
 "    ex.ok(\"hello \" + requestWrapper.name);\n"
 "  } else {\n"
 "    StringBuilder validationError = new StringBuilder();\n"
-"    violations.stream().forEach(violation -&gt; validationError.append(violation.getMessage()));\n"
+"    violations.stream().forEach(violation -> validationError.append(violation.getMessage()));\n"
 "    ex.response().setStatusCode(400).end(validationError.toString());\n"
 "  }\n"
 "}</pre>"
