--- a/l10n/po/ja_JP/_posts/2020-06-25-quarkus-grpc.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-06-25-quarkus-grpc.adoc.po
@@ -224,7 +224,7 @@ msgstr "_説明_はここまでにして、実際に使ってみましょう。"
 #: upstream/_posts/2020-06-25-quarkus-grpc.adoc:82
 #, fuzzy, no-wrap
 msgid "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/anGcuMJPkQY\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>\n"
-msgstr "&lt;iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/anGcuMJPkQY\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen&gt;&lt;/iframe&gt;"
+msgstr "<iframe width=\"560\" height=\"315\" src=\"https://www.youtube.com/embed/anGcuMJPkQY\" frameborder=\"0\" allow=\"accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture\" allowfullscreen></iframe>"
 
 #. type: Plain text
 #: upstream/_posts/2020-06-25-quarkus-grpc.adoc:85
