--- a/l10n/po/ja_JP/_posts/2020-09-15-mutiny-pagination.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-09-15-mutiny-pagination.adoc.po
@@ -70,7 +70,7 @@ msgstr "まず、APIが必要です。アレックスは、ビールを検索す
 #: upstream/_posts/2020-09-15-mutiny-pagination.adoc:29
 #, fuzzy
 msgid "If you call `https://api.punkapi.com/v2/beers?page=1`, you get a JSON array like:"
-msgstr "を呼び出すと `&lt;a href=\"https://api.punkapi.com/v2/beers?page=1\" class=\"bare\"&gt;https://api.punkapi.com/v2/beers?page=1&lt;/a&gt;`のようなJSON配列を得ることができます。"
+msgstr "を呼び出すと `<a href=\"https://api.punkapi.com/v2/beers?page=1\" class=\"bare\">https://api.punkapi.com/v2/beers?page=1</a>`のようなJSON配列を得ることができます。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-09-15-mutiny-pagination.adoc:41
