--- a/l10n/po/ja_JP/_posts/2020-10-13-uni-retry.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-10-13-uni-retry.adoc.po
@@ -242,7 +242,7 @@ msgstr ""
 msgid ""
 "Uni<String> uni = invokePickyService(client)\n"
 "    .onFailure().retry().until(failure -> ! (failure instanceof TooManyRequestsException));\n"
-msgstr "Uni&lt;String&gt; uni = invokePickyService(client) .onFailure().retry().until(failure → !(failure instanceof TooManyRequestsException));"
+msgstr "Uni<String> uni = invokePickyService(client) .onFailure().retry().until(failure → !(failure instanceof TooManyRequestsException));"
 
 #. type: delimited block -
 #: upstream/_posts/2020-10-13-uni-retry.adoc:126
@@ -278,7 +278,7 @@ msgid ""
 "Uni<String> uni = invokePickyService(client)\n"
 "    .onFailure().retry()\n"
 "        .withBackOff(Duration.ofSeconds(1)).withJitter(0.2).atMost(10);\n"
-msgstr "Uni&lt;String&gt; uni = invokePickyService(client) .onFailure().retry() .withBackOff(Duration.ofSeconds(1)).withJitter(0.2).atMost(10);"
+msgstr "Uni<String> uni = invokePickyService(client) .onFailure().retry() .withBackOff(Duration.ofSeconds(1)).withJitter(0.2).atMost(10);"
 
 #. type: Plain text
 #: upstream/_posts/2020-10-13-uni-retry.adoc:144
