--- a/l10n/po/ja_JP/_posts/2022-01-13-quarkus-aws-cloudwatch_extension.adoc.po
+++ b/l10n/po/ja_JP/_posts/2022-01-13-quarkus-aws-cloudwatch_extension.adoc.po
@@ -70,8 +70,8 @@ msgid ""
 "    • The root pom.xml *MUST* inherit from io.quarkiverse:quarkiverse-parent\n"
 "    • A Quarkiverse extension contains the following folders and files:\n"
 msgstr ""
-"    • エクステンションのリポジトリはquarkus-&lt;project&gt;という名前でなければなりません。\n"
-"    • Quarkiverseの拡張機能は、io.quarkiverse.&lt;project&gt;のgroupIdに属さ *なければなりませ*ん。\n"
+"    • エクステンションのリポジトリはquarkus-<project>という名前でなければなりません。\n"
+"    • Quarkiverseの拡張機能は、io.quarkiverse.<project>のgroupIdに属さ *なければなりませ*ん。\n"
 "    • ルートpom.xmlはio.quarkiverse:quarkiverse-parentを継承し *なければなりません*。\n"
 "    • Quarkiverseの拡張機能には、以下のフォルダとファイルが含まれます。\n"
 
