--- a/l10n/po/ja_JP/_versions/main/guides/qute-reference.adoc.po
+++ b/l10n/po/ja_JP/_versions/main/guides/qute-reference.adoc.po
@@ -78,7 +78,7 @@ msgstr ""
 #, no-wrap
 msgid ""
 "Qute.fmt(\"<html>{header}</html>\").contentType(\"text/html\").data(\"header\", \"<h1>My header</h1>\").render(); <3>\n"
-"// <html>&lt;h1&gt;Header&lt;/h1&gt;</html> <4>\n"
+"// <html><h1>Header</h1></html> <4>\n"
 msgstr ""
 
 #. type: delimited block -
