--- a/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
+++ b/l10n/po/ja_JP/_guides/gradle-tooling.adoc.po
@@ -57,7 +57,7 @@ msgstr ""
 #: upstream/_guides/gradle-tooling.adoc:27
 #, fuzzy
 msgid "_For more information about how to install the Quarkus CLI and use it, please refer to xref:cli-tooling.adoc[the Quarkus CLI guide]._"
-msgstr "_Quarkus CLIのインストール方法や使用方法については、&lt;a href=\"cli-tooling.html\"&gt;Quarkus CLIガイド&lt;/a&gt;_を参照してください。"
+msgstr "_Quarkus CLIのインストール方法や使用方法については、<a href=\"cli-tooling.html\">Quarkus CLIガイド</a>_を参照してください。"
 
 #. type: Block title
 #: upstream/_guides/gradle-tooling.adoc:30
