--- a/l10n/po/ja_JP/_guides/kafka-reactive-getting-started.adoc.po
+++ b/l10n/po/ja_JP/_guides/kafka-reactive-getting-started.adoc.po
@@ -768,7 +768,7 @@ msgstr "Quarkusは、Kafkaブローカーを自動的に起動し、アプリケ
 #: upstream/_guides/kafka-reactive-getting-started.adoc:394
 #, fuzzy
 msgid "Open `http://localhost:8080/quotes.html` in your browser and request some quotes by clicking the button."
-msgstr "開く `&lt;a href=\"http://localhost:8080/quotes.html\" class=\"bare\"&gt;http://localhost:8080/quotes.html&lt;/a&gt;`をブラウザで開き、ボタンをクリックして見積もりを依頼してください。"
+msgstr "開く `<a href=\"http://localhost:8080/quotes.html\" class=\"bare\">http://localhost:8080/quotes.html</a>`をブラウザで開き、ボタンをクリックして見積もりを依頼してください。"
 
 #. type: Title ==
 #: upstream/_guides/kafka-reactive-getting-started.adoc:395
