--- a/l10n/po/ja_JP/_posts/2020-09-22-kafka-avro.adoc.po
+++ b/l10n/po/ja_JP/_posts/2020-09-22-kafka-avro.adoc.po
@@ -176,7 +176,7 @@ msgid ""
 "      </execution>\n"
 "  </executions>\n"
 "</plugin>\n"
-msgstr "&lt;plugin&gt; &lt;groupId&gt;org.apache.avro&lt;/groupId&gt; &lt;artifactId&gt;avro-maven-plugin&lt;/artifactId&gt; &lt;version&gt;1.9.2&lt;/version&gt; &lt;executions&gt; &lt;execution&gt; &lt;phase&gt;generate-sources&lt;/phase&gt; &lt;goals&gt; &lt;goal&gt;schema&lt;/goal&gt; &lt;/goals&gt; &lt;configuration&gt; &lt;sourceDirectory&gt;src/main/avro&lt;/sourceDirectory&gt; &lt;outputDirectory&gt;${project.build.directory}/generated-sources&lt;/outputDirectory&gt; &lt;stringType&gt;String&lt;/stringType&gt; &lt;/configuration&gt; &lt;/execution&gt; &lt;/executions&gt; &lt;/plugin&gt;となります。"
+msgstr "<plugin> <groupId>org.apache.avro</groupId> <artifactId>avro-maven-plugin</artifactId> <version>1.9.2</version> <executions> <execution> <phase>generate-sources</phase> <goals> <goal>schema</goal> </goals> <configuration> <sourceDirectory>src/main/avro</sourceDirectory> <outputDirectory>${project.build.directory}/generated-sources</outputDirectory> <stringType>String</stringType> </configuration> </execution> </executions> </plugin>となります。"
 
 #. type: delimited block -
 #: upstream/_posts/2020-09-22-kafka-avro.adoc:86
@@ -313,7 +313,7 @@ msgstr ""
 #: upstream/_posts/2020-09-22-kafka-avro.adoc:150
 #, fuzzy, no-wrap
 msgid "    @Inject @Channel(\"movies\") Emitter<Movie> emitter;\n"
-msgstr "<pre>@Inject @Channel(\"movies\") Emitter&lt;Movie&gt; emitter;</pre>"
+msgstr "<pre>@Inject @Channel(\"movies\") Emitter<Movie> emitter;</pre>"
 
 #. type: Plain text
 #: upstream/_posts/2020-09-22-kafka-avro.adoc:160
